# iso-updater

./: Cargo.toml  README.md
src/: cli.rs  data.rs  init.rs  installation.rs  iso_file.rs  iso_source.rs  main.rs  update.rs  utils.rs
src/iso_sources/: constant_url.rs  linux_mint.rs  mod.rs
