[package]
name = "iso-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
tempdir = "0.3.7"
ron = "0.10.1"
httpdir = "0.1.0"
url = "2.5.4"
command-error = "0.6.0"

[build-dependencies]
built = "0.8.0"
